--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,10 @@
       <li class="link"><a class="active" href="index.html">About</a></li>
     </ul>
     <div>
+      <h3>My Projects</h3>
+      <hr>
+      <a target="_blank" href="https://github.com/dimparato">My GitHub</a></br>
+      <a target="_blank" href="https://github.com/dimparato/Liri-Node-App">Liri!</a>
       <h3>Benny's Art</h3>
       <hr>
       <a target="_blank" href="assets/images/art01.jpg">
