--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
       <hr>
       <a target="_blank" href="https://github.com/dimparato">My GitHub</a></br>
       <a target="_blank" href="https://github.com/dimparato/Liri-Node-App">Liri!</a>
+      <a target="_blank" href="https://dry-anchorage-14575.herokuapp.com/">Liri!</a>
       <h3>Benny's Art</h3>
       <hr>
       <a target="_blank" href="assets/images/art01.jpg">
